--- a/config.conf
+++ b/config.conf
@@ -45,6 +45,9 @@ url_attachment = https://foo.ehealthz.es:7001/send/attachment
 ##Configuration of the communication with the FHIR server
 [net_fhir]
 url_fhir = https://foo.ehealthz.es:443/hapi-fhir-jpaserver-example/baseDstu3/
+fhir_secure = True
+token_fhir = foo
+file_cert_fhir = certificates/foo.pem
 
 [general]
 debug = -2
